# image_processor

./: CMakeLists.txt  constant.h  image_processor.cpp  readme.md
filters/: filters.cpp  filters.h
image/: image.cpp  image.h
parser_and_controller/: filter_controller.cpp  filter_controller.h  parser.cpp  parser.h
reading_and_writing/: reader.cpp  reader.h  writer.cpp  writer.h
tests/: filter_controller_test.cpp  parser_test.cpp  reading_test.cpp  writing_test.cpp
